Side panel: aesthetic adjustments.

--- a/Classes/SidePanel.storyboard
+++ b/Classes/SidePanel.storyboard
@@ -83,8 +83,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="rpradenc@incwo.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KDQ-9X-Q2O">
+                                <rect key="frame" x="8" y="8" width="304" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vo9-PQ-dbP">
-                                <rect key="frame" x="8" y="34" width="109" height="30"/>
+                                <rect key="frame" x="105.5" y="34" width="109" height="30"/>
                                 <state key="normal" title="Se déconnecter">
                                     <color key="titleColor" red="0.8622185202" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -92,19 +98,13 @@
                                     <action selector="logOut:" destination="aY0-cg-jCA" eventType="touchUpInside" id="OBd-wH-8ZZ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="rpradenc@incwo.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KDQ-9X-Q2O">
-                                <rect key="frame" x="8" y="8" width="304" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.1137254902" green="0.19215686269999999" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="KDQ-9X-Q2O" firstAttribute="leading" secondItem="Y4o-eO-z0t" secondAttribute="leading" constant="8" id="9rg-62-scz"/>
                             <constraint firstItem="Y4o-eO-z0t" firstAttribute="bottom" secondItem="vo9-PQ-dbP" secondAttribute="bottom" constant="8" id="MZ1-cF-1Ym"/>
                             <constraint firstItem="Y4o-eO-z0t" firstAttribute="trailing" secondItem="KDQ-9X-Q2O" secondAttribute="trailing" constant="8" id="NXM-PV-uKo"/>
-                            <constraint firstItem="vo9-PQ-dbP" firstAttribute="leading" secondItem="Y4o-eO-z0t" secondAttribute="leading" constant="8" id="n1K-mE-VAj"/>
+                            <constraint firstItem="vo9-PQ-dbP" firstAttribute="centerX" secondItem="Y4o-eO-z0t" secondAttribute="centerX" id="OtV-2L-QrX"/>
                             <constraint firstItem="KDQ-9X-Q2O" firstAttribute="top" secondItem="Y4o-eO-z0t" secondAttribute="top" constant="8" id="uyb-P6-dnW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Y4o-eO-z0t"/>
@@ -167,13 +167,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Déconnecté" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8nn-bO-FPt">
-                                <rect key="frame" x="8" y="8" width="83" height="18"/>
+                                <rect key="frame" x="118.5" y="8" width="83" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="br5-OS-Dqo">
-                                <rect key="frame" x="8" y="34" width="147" height="30"/>
+                                <rect key="frame" x="86.5" y="34" width="147" height="30"/>
                                 <state key="normal" title="Se connecter à incwo"/>
                                 <connections>
                                     <action selector="logIn:" destination="C7V-Lj-nJ0" eventType="touchUpInside" id="Xun-96-Tal"/>
@@ -184,8 +184,8 @@
                         <constraints>
                             <constraint firstItem="5yN-x0-y8R" firstAttribute="bottom" secondItem="br5-OS-Dqo" secondAttribute="bottom" constant="8" id="5gh-lS-4pS"/>
                             <constraint firstItem="8nn-bO-FPt" firstAttribute="top" secondItem="5yN-x0-y8R" secondAttribute="top" constant="8" id="8UG-jb-pnJ"/>
-                            <constraint firstItem="8nn-bO-FPt" firstAttribute="leading" secondItem="5yN-x0-y8R" secondAttribute="leading" constant="8" id="Rhx-Z6-agl"/>
-                            <constraint firstItem="br5-OS-Dqo" firstAttribute="leading" secondItem="5yN-x0-y8R" secondAttribute="leading" constant="8" id="V3N-yM-UM4"/>
+                            <constraint firstItem="8nn-bO-FPt" firstAttribute="centerX" secondItem="5yN-x0-y8R" secondAttribute="centerX" id="iQa-Xa-yHP"/>
+                            <constraint firstItem="br5-OS-Dqo" firstAttribute="centerX" secondItem="5yN-x0-y8R" secondAttribute="centerX" id="pcX-dl-fH0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5yN-x0-y8R"/>
                     </view>
