On the Side Panel, removed the "Log in" button. The user will have to log in in the Office or Scan tabs, but it simplifies the interactions and the code, since we won't have to open an extra modal to log in.

--- a/Classes/SidePanel.storyboard
+++ b/Classes/SidePanel.storyboard
@@ -161,31 +161,22 @@
         <!--loggedOut-->
         <scene sceneID="u7P-Ks-GRI">
             <objects>
-                <viewController storyboardIdentifier="loggedOut" title="loggedOut" id="C7V-Lj-nJ0" customClass="LoggedOutViewController" customModule="facilescan" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loggedOut" title="loggedOut" id="C7V-Lj-nJ0" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zw9-hU-CtS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Déconnecté" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8nn-bO-FPt">
-                                <rect key="frame" x="118.5" y="8" width="83" height="18"/>
+                                <rect key="frame" x="118.5" y="27" width="83" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="br5-OS-Dqo">
-                                <rect key="frame" x="86.5" y="34" width="147" height="30"/>
-                                <state key="normal" title="Se connecter à incwo"/>
-                                <connections>
-                                    <action selector="logIn:" destination="C7V-Lj-nJ0" eventType="touchUpInside" id="Xun-96-Tal"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.1137254902" green="0.19215686269999999" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="5yN-x0-y8R" firstAttribute="bottom" secondItem="br5-OS-Dqo" secondAttribute="bottom" constant="8" id="5gh-lS-4pS"/>
-                            <constraint firstItem="8nn-bO-FPt" firstAttribute="top" secondItem="5yN-x0-y8R" secondAttribute="top" constant="8" id="8UG-jb-pnJ"/>
                             <constraint firstItem="8nn-bO-FPt" firstAttribute="centerX" secondItem="5yN-x0-y8R" secondAttribute="centerX" id="iQa-Xa-yHP"/>
-                            <constraint firstItem="br5-OS-Dqo" firstAttribute="centerX" secondItem="5yN-x0-y8R" secondAttribute="centerX" id="pcX-dl-fH0"/>
+                            <constraint firstItem="8nn-bO-FPt" firstAttribute="centerY" secondItem="5yN-x0-y8R" secondAttribute="centerY" id="qM4-fA-V4o"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5yN-x0-y8R"/>
                     </view>
